# Drexel-CPU

./: .gitignore  README.md
docs/: setup.md
experimental/ui/: .gitignore  Makefile  README.md  board.go  connection.go  go.mod  main.go  model.go
hardware/: cs281_board.repl  cs281_debug.resc  cs281_run.resc
hardware/docs/: .~lock.CS281_TRM.pdf#  CS281_TRM.docx  lu402okn26.tmp
hardware/lib/: cs281.h  cs281.inc  cs281.ld  exit.S  startup.S  uart.S
lab1-blinky/: .gitignore  Makefile  README.md  main.S
lab2-blinky2/: Makefile  README.md  main.S
lab3-arrays/: Makefile  README.md  main.S
lab4a-timers-c/: Makefile  README.md  lab4a_debug.resc  lab4a_run.resc  main.c
lab4b-timers/: Makefile  README.md  lab4b_debug.resc  lab4b_run.resc  main.S
lab5-gpio-input/: Makefile  README.md  lab5_debug.resc  lab5_run.resc  main.S
lab5-gpio-input-rust/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  lab5r_debug.resc  lab5r_run.resc  memory.x
lab5-gpio-input-rust/.cargo/: config.toml
lab5-gpio-input-rust/src/: main.rs
lab5-gpio-input-zig/: Makefile  README.md  build.zig  build.zig.zon  cs281.ld  lab5z_debug.resc  lab5z_run.resc
lab5-gpio-input-zig/src/: main.zig
